sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/Reg_Mapping__c.object-meta.xml
<CustomObject>
    <description>Reg Mapping Object</description>
    <label>Reg Mapping</label>
    <nameField>
        <displayFormat>REG MAP-{0000000}</displayFormat>
        <label>Reg Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reg Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>