sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/fields/Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Role Column</description>
    <label>Employee Role</label>
    <referenceTo>Employee_Role__c</referenceTo>
    <relationshipLabel>Reg Mappings</relationshipLabel>
    <relationshipName>Reg_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>