sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/fields/Guiding_Question__c.field-meta.xml
<CustomField>
    <fullName>Guiding_Question__c</fullName>
    <description>REG Guiding Question</description>
    <formula>Reg_Factor__r.Guiding_Question__c</formula>
    <inlineHelpText>REG Guiding Question</inlineHelpText>
    <label>Guiding Question</label>
    <type>Text</type>
</CustomField>