sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>Reg_Factor__r.Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>