sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/fields/Level_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_Description__c</fullName>
    <formula>Reg_Factor__r.Level_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Description</label>
    <type>Text</type>
</CustomField>