sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/fields/Reg_Factor__c.field-meta.xml
<CustomField>
    <fullName>Reg_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>REG Factor Lookup</description>
    <inlineHelpText>REG Factor Lookup</inlineHelpText>
    <label>Reg Factor</label>
    <referenceTo>Reg_Config__c</referenceTo>
    <relationshipLabel>Reg Mappings</relationshipLabel>
    <relationshipName>Reg_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>