sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/listViews/FLI_Directors_Reg_Mapping.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Reg_Mapping</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>