sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/listViews/HR_Admin_Reg_Mapping.listView-meta.xml
<ListView>
    <fullName>HR_Admin_Reg_Mapping</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Admin</label>
    <queue>HR_Admin</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>