sfSandBoxCode/force-app/main/default/objects/Reg_Mapping__c/listViews/Talent_Director_Reg_Mapping.listView-meta.xml
<ListView>
    <fullName>Talent_Director_Reg_Mapping</fullName>
    <filterScope>Queue</filterScope>
    <label>Talent Directors</label>
    <queue>Talent_Director</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>